--- a/dbi.html
+++ b/dbi.html
@@ -137,12 +137,13 @@
                     <table class="table table-responsive">
                         <thead>
                             <tr>
-                                <th scope="col" class="table-dark"><input class="form-check-input" type="checkbox"
+                                <th scope="col" class="table-dark text-center"><input class="form-check-input" type="checkbox"
                                         value="" id="selector" aria-label="..."></th>
-                                <th scope="col" class="table-dark large-title"><input type="text"
-                                        class="search align-bottom m-0 p-0" id="query" placeholder="Title"
-                                        onkeyup="onFinishTyping()" /></th>
-                                <th scope="col" class="table-dark">Downloaded</th>
+                                <th scope="col" class="table-dark large-title m-0 p-0 text-center align-middle">
+                                    <input type="text" class="search m-0 p-0" id="query"
+                                        placeholder="Title" onkeyup="onFinishTyping()" />
+                                </th>
+                                <th scope="col" class="table-dark text-center">Downloaded</th>
                                 <!--<th scope="col" class="table-dark">Available</th>-->
                             </tr>
                         </thead>
