--- a/dbi.html
+++ b/dbi.html
@@ -76,7 +76,7 @@
             </a>
             <div>
                 <button type="button" style="text-decoration: none;" class="btn btn-link link-warning m-0 p-0"
-                    onclick="getOrphans()">Unlisted</button>
+                    onclick="getSubList('None')">Unlisted</button>
                 <a href="../ytdiff" class="link-warning align-middle" style="text-decoration: none;">Back</a>
             </div>
         </div>
@@ -101,11 +101,14 @@
                 <div class="container-fluid m-0 p-0 container-counters">
                     <div class="row">
                         <div class="input-group mt-3">
-                            <input type="number" class="form-control" placeholder="0" min="0" name="start_input"
-                                id="start_main" data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
+                            <input type="number" class="form-control" placeholder="0" min="0" name="start_playlist"
+                                id="start_playlist" data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
                             <span class="input-group-text">-</span>
-                            <input type="number" class="form-control" placeholder="10" min="1" name="stop_input"
-                                id="stop_main" data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
+                            <input type="number" class="form-control" placeholder="10" min="1" name="stop_playlist"
+                                id="stop_playlist" data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
+                            <span class="input-group-text">-</span>
+                            <input type="number" class="form-control" placeholder="10" min="1" name="chunk_playlist"
+                                id="chunk_playlist" data-bs-toggle="tooltip" data-bs-placement="top" title="Chunk" />
                             <button id="next" type="button" onclick="nextMain()" class="btn btn-primary">
                                 Next
                             </button>
@@ -117,13 +120,13 @@
                 </div>
                 <div class="container-fluid mb-3 m-0 p-0">
                     <div class="input-group mt-3">
-                        <select class="form-select" id="sort-by" aria-label="sorting">
+                        <select class="form-select" id="sort_by_playlist" aria-label="sorting">
                             <option selected value="0">Choose...</option>
                             <option value="1">ID</option>
                             <option value="2">CreatedAt</option>
                             <option value="3">UpdatedAt</option>
                         </select>
-                        <select class="form-select" id="order" aria-label="sorting">
+                        <select class="form-select" id="order_by_playlist" aria-label="ordering">
                             <option selected value="0">Choose...</option>
                             <option value="1">Ascending</option>
                             <option value="2">Descending</option>
@@ -137,11 +140,11 @@
                     <table class="table table-responsive">
                         <thead>
                             <tr>
-                                <th scope="col" class="table-dark text-center"><input class="form-check-input" type="checkbox"
-                                        value="" id="selector" aria-label="..."></th>
+                                <th scope="col" class="table-dark text-center"><input class="form-check-input"
+                                        type="checkbox" value="" id="selector" aria-label="..."></th>
                                 <th scope="col" class="table-dark large-title m-0 p-0 text-center align-middle">
-                                    <input type="text" class="search m-0 p-0" id="query"
-                                        placeholder="Title" onkeyup="onFinishTyping()" />
+                                    <input type="text" class="search m-0 p-0" id="query_sublist" placeholder="Title"
+                                        onkeyup="onFinishTyping()" />
                                 </th>
                                 <th scope="col" class="table-dark text-center">Downloaded</th>
                                 <!--<th scope="col" class="table-dark">Available</th>-->
@@ -153,14 +156,14 @@
                 <div class="container-fluid m-0 p-0 container-counters">
                     <div class="row">
                         <div class="input-group mt-3">
-                            <input type="number" class="form-control" placeholder="0" min="0" name="start_input"
-                                id="start_sub" data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
+                            <input type="number" class="form-control" placeholder="0" min="0" name="start_sublist"
+                                id="start_sublist" data-bs-toggle="tooltip" data-bs-placement="top" title="Start" />
                             <span class="input-group-text">-</span>
-                            <input type="number" class="form-control" placeholder="10" min="1" name="stop_input"
-                                id="stop_sub" data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
+                            <input type="number" class="form-control" placeholder="10" min="1" name="stop_sublist"
+                                id="stop_sublist" data-bs-toggle="tooltip" data-bs-placement="top" title="Stop" />
                             <span class="input-group-text">-</span>
-                            <input type="number" class="form-control" placeholder="10" min="1" name="stop_input"
-                                id="chunk" data-bs-toggle="tooltip" data-bs-placement="top" title="Chunk" />
+                            <input type="number" class="form-control" placeholder="10" min="1" name="chunk_sublist"
+                                id="chunk_sublist" data-bs-toggle="tooltip" data-bs-placement="top" title="Chunk" />
                             <button id="next-sub" type="button" onclick="nextSub()" class="btn btn-primary">
                                 Next
                             </button>
@@ -174,14 +177,14 @@
                     <div class="row">
                         <div class="col mb-3">
                             <div class="btn-group" role="group" aria-label="controls">
-                                <button id="clear" type="button" onclick="depopulateList(true)" class="btn btn-primary">
+                                <button id="clear" type="button" onclick="clearSubList(true)" class="btn btn-primary">
                                     Clear
                                 </button>
                             </div>
                         </div>
                         <div class="col mb-3">
                             <div class="btn-group float-end" role="group" aria-label="controls">
-                                <button id="dnld" type="button" onclick="download_selected()"
+                                <button id="download_btn" type="button" onclick="download_selected()"
                                     class="btn btn-primary me-3">
                                     Download
                                 </button>
@@ -205,26 +208,27 @@
         window.onload = init();
         var url_global = "None";
         function init() {
-            document.getElementById("start_main").value = 0;
-            document.getElementById("stop_main").value = 10;
-            document.getElementById("start_sub").value = 0;
-            document.getElementById("stop_sub").value = 10;
-            document.getElementById("chunk").value = 10;
+            document.getElementById("start_playlist").value = 0;
+            document.getElementById("stop_playlist").value = 10;
+            document.getElementById("chunk_playlist").value = 10;
+            document.getElementById("start_sublist").value = 0;
+            document.getElementById("stop_sublist").value = 10;
+            document.getElementById("chunk_sublist").value = 10;
             document.getElementById("selector").checked = false;
-            document.getElementById("sort-by").value = 1;
-            document.getElementById("order").value = 1;
-            document.getElementById("query").value = "";
+            document.getElementById("sort_by_playlist").value = 1;
+            document.getElementById("order_by_playlist").value = 1;
+            document.getElementById("query_sublist").value = "";
             sockSetup();
-            getMainlist(0, 10);
+            getMainList(0, 10);
         }
-        document.getElementById("chunk").addEventListener("input", function (evt) {
+        document.getElementById("chunk_sublist").addEventListener("input", function (evt) {
             var value = parseInt(this.value, 10);
             if (value >= 1) {
                 var start = parseInt(
-                    document.getElementById("start_sub").value,
+                    document.getElementById("start_sublist").value,
                     10
                 );
-                document.getElementById("stop_sub").value = start + value;
+                document.getElementById("stop_sublist").value = start + value;
             } else {
                 this.value = 1;
             }
@@ -233,30 +237,30 @@
             evt.preventDefault()
             //console.log("event", evt, evt.target.value);
             var value = parseInt(evt.target.value, 10);
-            var start = parseInt(document.getElementById("start_sub").value, 10);
-            if (type == "chunk") {
+            var start = parseInt(document.getElementById("start_sublist").value, 10);
+            if (type == "chunk_sublist") {
                 if (value >= 1) {
-                    document.getElementById("stop_sub").value = start + value;
+                    document.getElementById("stop_sublist").value = start + value;
                 }
                 else {
                     this.value = 1;
                 }
-            } else if (type == "start") {
+            } else if (type == "start_sublist") {
                 if (value >= 0) {
-                    var chunk = parseInt(document.getElementById("chunk").value, 10);
-                    document.getElementById("stop_sub").value = chunk + value;
+                    var chunk_sublist = parseInt(document.getElementById("chunk_sublist").value, 10);
+                    document.getElementById("stop_sublist").value = chunk_sublist + value;
                 }
                 else {
                     this.value = 0;
                 }
             }
-            else if (type == "stop") {
+            else if (type == "stop_sublist") {
                 if (value >= 1) {
                     if (value - start >= 1)
-                        document.getElementById("chunk").value = value - start;
+                        document.getElementById("chunk_sublist").value = value - start;
                     else {
-                        document.getElementById("stop_sub").value = value + 1;
-                        document.getElementById("chunk").value = 1;
+                        document.getElementById("stop_sublist").value = value + 1;
+                        document.getElementById("chunk_sublist").value = 1;
                     }
                 }
                 else {
@@ -264,9 +268,9 @@
                 }
             }
         }
-        document.getElementById("chunk").addEventListener('input', function (evt) { input_limiter("chunk", evt) });
-        document.getElementById("start_sub").addEventListener('input', function (evt) { input_limiter("start", evt) });
-        document.getElementById("stop_sub").addEventListener('input', function (evt) { input_limiter("stop", evt) });
+        document.getElementById("chunk_sublist").addEventListener('input', function (evt) { input_limiter("chunk_sublist", evt) });
+        document.getElementById("start_sublist").addEventListener('input', function (evt) { input_limiter("start_sublist", evt) });
+        document.getElementById("stop_sublist").addEventListener('input', function (evt) { input_limiter("stop_sublist", evt) });
         document.getElementById("selector").addEventListener("input", function (evt) {
             if (this.checked) {
                 select_all();
