--- a/dbi.html
+++ b/dbi.html
@@ -184,7 +184,7 @@
                         </div>
                         <div class="col mb-3">
                             <div class="btn-group float-end" role="group" aria-label="controls">
-                                <button id="download_btn" type="button" onclick="download_selected()"
+                                <button id="download_btn" type="button" onclick="downloadSelected()"
                                     class="btn btn-primary me-3">
                                     Download
                                 </button>
@@ -206,76 +206,108 @@
     </div>
     <script defer>
         window.onload = init();
+        // This needs to outside of any functions
         var url_global = "None";
         function init() {
+            getMainList(0, 10);
+            sockSetup();
             document.getElementById("start_playlist").value = 0;
             document.getElementById("stop_playlist").value = 10;
             document.getElementById("chunk_playlist").value = 10;
+            document.getElementById("sort_by_playlist").value = 1;
+            document.getElementById("order_by_playlist").value = 1;
+
             document.getElementById("start_sublist").value = 0;
             document.getElementById("stop_sublist").value = 10;
             document.getElementById("chunk_sublist").value = 10;
-            document.getElementById("selector").checked = false;
-            document.getElementById("sort_by_playlist").value = 1;
-            document.getElementById("order_by_playlist").value = 1;
             document.getElementById("query_sublist").value = "";
-            sockSetup();
-            getMainList(0, 10);
+
+            document.getElementById("selector").checked = false;
         }
-        document.getElementById("chunk_sublist").addEventListener("input", function (evt) {
-            var value = parseInt(this.value, 10);
-            if (value >= 1) {
-                var start = parseInt(
-                    document.getElementById("start_sublist").value,
-                    10
-                );
-                document.getElementById("stop_sublist").value = start + value;
-            } else {
-                this.value = 1;
-            }
-        });
-        function input_limiter(type, evt) {
+        
+        function input_limiter(evt) {
             evt.preventDefault()
-            //console.log("event", evt, evt.target.value);
-            var value = parseInt(evt.target.value, 10);
-            var start = parseInt(document.getElementById("start_sublist").value, 10);
-            if (type == "chunk_sublist") {
-                if (value >= 1) {
-                    document.getElementById("stop_sublist").value = start + value;
-                }
-                else {
-                    this.value = 1;
-                }
-            } else if (type == "start_sublist") {
-                if (value >= 0) {
-                    var chunk_sublist = parseInt(document.getElementById("chunk_sublist").value, 10);
-                    document.getElementById("stop_sublist").value = chunk_sublist + value;
-                }
-                else {
-                    this.value = 0;
-                }
-            }
-            else if (type == "stop_sublist") {
-                if (value >= 1) {
-                    if (value - start >= 1)
-                        document.getElementById("chunk_sublist").value = value - start;
-                    else {
-                        document.getElementById("stop_sublist").value = value + 1;
-                        document.getElementById("chunk_sublist").value = 1;
+            //console.log(evt.explicitOriginalTarget.id, evt.inputType, evt.target.value);
+            var value = +evt.target.value;
+            const start_sublist = +document.getElementById("start_sublist").value;
+            const start_playlist = +document.getElementById("start_playlist").value;
+            const chunk_sublist = +document.getElementById("chunk_sublist").value;
+            const chunk_playlist = +document.getElementById("chunk_playlist").value;
+            switch (evt.explicitOriginalTarget.id) {
+                case "chunk_sublist":
+                    if (value >= 1) {
+                        document.getElementById("stop_sublist").value = start_sublist + value;
+                    } else {
+                        evt.target.value = 1;
                     }
-                }
-                else {
-                    this.value = 1;
-                }
+                    break;
+                case "chunk_playlist":
+                    if (value >= 1) {
+                        document.getElementById("stop_playlist").value = start_playlist + value;
+                    }
+                    else {
+                        evt.target.value = 1;
+                    }
+                    break;
+                case "start_sublist":
+                    if (value >= 0) {
+                        document.getElementById("stop_sublist").value = chunk_sublist + value;
+                    }
+                    else {
+                        evt.target.value = 0;
+                    }
+                    break;
+                case "start_playlist":
+                    if (value >= 0) {
+                        document.getElementById("stop_playlist").value = chunk_playlist + value;
+                    }
+                    else {
+                        evt.target.value = 0;
+                    }
+                    break;
+                case "stop_sublist":
+                    if (value >= 1) {
+                        if (value - start_sublist >= 1)
+                            document.getElementById("chunk_sublist").value = value - start_sublist;
+                        else {
+                            document.getElementById("stop_sublist").value = value + 1;
+                            document.getElementById("chunk_sublist").value = 1;
+                        }
+                    }
+                    else {
+                        evt.target.value = 1;
+                    }
+                    break;
+                case "stop_playlist":
+                    if (value >= 1) {
+                        if (value - start_playlist >= 1)
+                            document.getElementById("chunk_playlist").value = value - start_playlist;
+                        else {
+                            document.getElementById("stop_playlist").value = value + 1;
+                            document.getElementById("chunk_playlist").value = 1;
+                        }
+                    }
+                    else {
+                        evt.target.value = 1;
+                    }
+                    break;
+                default:
+                    break;
             }
         }
-        document.getElementById("chunk_sublist").addEventListener('input', function (evt) { input_limiter("chunk_sublist", evt) });
-        document.getElementById("start_sublist").addEventListener('input', function (evt) { input_limiter("start_sublist", evt) });
-        document.getElementById("stop_sublist").addEventListener('input', function (evt) { input_limiter("stop_sublist", evt) });
+        document.getElementById("chunk_sublist").addEventListener('input', function (evt) { input_limiter(evt) });
+        document.getElementById("start_sublist").addEventListener('input', function (evt) { input_limiter(evt) });
+        document.getElementById("stop_sublist").addEventListener('input', function (evt) { input_limiter(evt) });
+        document.getElementById("chunk_playlist").addEventListener('input', function (evt) { input_limiter(evt) });
+        document.getElementById("start_playlist").addEventListener('input', function (evt) { input_limiter(evt) });
+        document.getElementById("stop_playlist").addEventListener('input', function (evt) { input_limiter(evt) });
+
         document.getElementById("selector").addEventListener("input", function (evt) {
+            evt.preventDefault();
             if (this.checked) {
-                select_all();
+                selectAll();
             } else {
-                select_none();
+                selectNone();
             }
         });
 
@@ -288,7 +320,6 @@
                 }, d);
             }
         }
-
         const onFinishTyping = debounce(searchSub, 500);
     </script>
 </body>
