updated the index.js and dbi.html

--- a/dbi.html
+++ b/dbi.html
@@ -68,7 +68,7 @@
 </head>
 
 <body>
-    <nav class="mt-0 pt-0 mb-0 pb-0 navbar navbar-dark bg-dark nav-size">
+    <nav id="nav" class="mt-0 pt-0 mb-0 pb-0 navbar navbar-dark bg-dark nav-size">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
                 <img src="/ytdiff/assets/nav.png" alt="" width="30" height="30" class="d-inline-block"><span
@@ -90,8 +90,8 @@
                             <tr>
                                 <th scope="col" class="table-dark">ID</th>
                                 <th scope="col" class="table-dark">List Title</th>
-                                <th scope="col" class="table-dark">CreatedAt</th>
-                                <th scope="col" class="table-dark">UpdatedAt</th>
+                                <th scope="col" class="table-dark">Updated On</th>
+                                <th scope="col" class="table-dark">Watch</th>
                                 <th scope="col" class="table-dark">Expand</th>
                             </tr>
                         </thead>
