--- a/dbi.html
+++ b/dbi.html
@@ -52,6 +52,15 @@
             max-height: 10vh;
         }
 
+        @media (max-width: 992px) {
+
+            /*This hides the column on smaller screens making it easier to read*/
+            th.extra,
+            td.extra {
+                display: none;
+            }
+        }
+
         @media (min-width: 992px) {
             .paddings {
                 padding-top: 0px;
@@ -90,7 +99,7 @@
                             <tr>
                                 <th scope="col" class="table-dark">ID</th>
                                 <th scope="col" class="table-dark">List Title</th>
-                                <th scope="col" class="table-dark">Updated On</th>
+                                <th scope="col" class="table-dark extra">Updated</th>
                                 <th scope="col" class="table-dark">Watch</th>
                                 <th scope="col" class="table-dark">Expand</th>
                             </tr>
