removed the watch back end and front end

--- a/dbi.html
+++ b/dbi.html
@@ -100,7 +100,7 @@
                                 <th scope="col" class="table-dark">ID</th>
                                 <th scope="col" class="table-dark">List Title</th>
                                 <th scope="col" class="table-dark extra">Updated</th>
-                                <th scope="col" class="table-dark">Watch</th>
+                                <!--<th scope="col" class="table-dark">Watch</th>-->
                                 <th scope="col" class="table-dark">Expand</th>
                             </tr>
                         </thead>
