--- a/dbi.html
+++ b/dbi.html
@@ -205,7 +205,7 @@
         </div>
     </div>
     <!--Toast-->
-    <div style="position: absolute; top: 10px; right: 10px">
+    <div style="position: absolute; bottom: 10px; right: 10px">
         <div class="toast align-items-bottom" role="alert" aria-live="assertive" aria-atomic="true" id="notify">
             <div class="d-flex">
                 <div class="toast-body"></div>
