now add cron watching and updating in background

--- a/dbi.html
+++ b/dbi.html
@@ -111,7 +111,7 @@
                                         placeholder="List Title" onkeyup="onFinishTypingMain()" />
                                 </th>
                                 <th scope="col" class="table-dark extra text-center">Updated</th>
-                                <!--<th scope="col" class="table-dark">Watch</th>-->
+                                <th scope="col" class="table-dark">Watch</th>
                                 <th scope="col" class="table-dark text-center">Expand</th>
                             </tr>
                         </thead>
