Did tests, scheduled_update doesn't seem to work

--- a/index.html
+++ b/index.html
@@ -157,16 +157,14 @@
                                 <th scope="col" class="table-dark text-center"><input class="form-check-input"
                                         type="checkbox" value="" id="selector" aria-label="..."></th>
                                 <th scope="col" class="table-dark large-title m-0 p-0 text-center align-middle">
-                                    <!--Title--><input type="text" class="search m-0 p-0" id="query_sublist"
-                                        placeholder="Title" onkeyup="onFinishTyping()" />
+                                    <input type="text" class="search m-0 p-0" id="query_sublist" placeholder="Title"
+                                        onkeyup="onFinishTyping()" />
                                 </th>
                                 <th scope="col" class="table-dark text-center">Saved</th>
+                                <!--<th scope="col" class="table-dark">Available</th>-->
                             </tr>
                         </thead>
-                        <div>
-                            <tbody id="listing">
-                            </tbody>
-                        </div>
+                        <tbody id="listing"></tbody>
                     </table>
                 </div>
             </div>
