--- a/dbi.html
+++ b/dbi.html
@@ -104,7 +104,7 @@
                 <div class="container-fluid m-0 p-0 container-table">
                     <table class="table table-responsive">
                         <thead>
-                            <tr>
+                            <tr class="bg-dark">
                                 <th scope="col" class="table-dark text-center">ID</th>
                                 <th scope="col" class="table-dark large-play-title m-0 p-0 text-center align-middle">
                                     <input type="text" class="search m-0 p-0" id="query_mainlist"
@@ -166,7 +166,7 @@
                                     <input type="text" class="search m-0 p-0" id="query_sublist" placeholder="Title"
                                         onkeyup="onFinishTyping()" />
                                 </th>
-                                <th scope="col" class="table-dark text-center">Downloaded</th>
+                                <th scope="col" class="table-dark text-center">Saved</th>
                                 <!--<th scope="col" class="table-dark">Available</th>-->
                             </tr>
                         </thead>
