remember to update index.js

--- a/dbi.html
+++ b/dbi.html
@@ -110,7 +110,7 @@
                                     <input type="text" class="search m-0 p-0" id="query_main_list"
                                         placeholder="List Title" onkeyup="onFinishTypingMain()" />
                                 </th>
-                                <th scope="col" class="table-dark extra text-center">Updated</th>
+                                <!--<th scope="col" class="table-dark extra text-center">Updated</th>-->
                                 <th scope="col" class="table-dark">Watch</th>
                                 <th scope="col" class="table-dark text-center">Expand</th>
                             </tr>
